<resources>
    <string name="app_name">Calculator</string>

    <!--numbers-->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <!--operators-->

    <string name="add">+</string>
    <string name="subs">-</string>
    <string name="multi">*</string>
    <string name="devide">/</string>
    <string name="dec">.</string>
    <string name="equal">=</string>
    <string name="menu">Clear</string>
    <string name="EMPTY_TEXT">Textbox is empty.</string>


</resources>
